<resources>
    <string name="app_name">HireHub</string>
    <string name="about_title">About</string>
    <string name="login_student">54516</string>
    <string name="firstName_student">Oumar</string>
    <string name="lastName_student">Magomadov</string>
    <string name="about_student">Cette application a été developpé par :</string>
    <string name="fragment_login_title">Login</string>
    <string name="fragment_about_title">About</string>
    <string name="login_text">Login</string>
    <string name="login_title_text">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Mot de passe</string>
    <string name="login_button_hint">Se connecter</string>
    <string name="password_content_description">Veuillez entrer votre mot de passe</string>

    <!-- Signup -->
    <string name="signup_successful_notification">Inscription réussie!</string>
    <string name="signup_unsuccessful_notification">Inscription échouée!</string>
    <string name="signup_password_forgot">Mot de passe oublié ?</string>
    <string name="signup_create_new_question">Pas encore de compte?</string>
    <string name="signup_create_account">Créer un compte</string>
    <string name="signup_gender_unsuccessful">Veuillez choisir un genre</string>
    <string name="signup_password_not_same">Les mots de passes sont pas identiques</string>
    <string name="signup_phone_number">Le numéro de téléphone renseigné n\est pas belge</string>

    <!-- Signin -->
    <string name="signin_successful_notification">Connexion réussie!</string>
    <string name="signin_unsuccessful_notification">Connexion échouée!</string>
    <string name="signin_invalide_email">Veuillez entrer un email au bon format</string>
    <string name="form_not_completed">"Veuillez complèter tout les champs"</string>

    <!-- ForgotPassword -->
    <string name="forgot_password_title">Reinitialser mot de passe</string>
    <string name="forgot_password_button">Envoyer un lien de réinitialisation</string>
    <string name="forgot_password_successful">Un mail de réinitialisation a été envoyer</string>
    <string name="forgot_password_unsuccessful">Cette utilisateur n\'existe pas</string>
    <string name="register_title_text">Register</string>
    <string name="register_button_hint">Créer un compte</string>
    <string name="register_connect_new_question">Vous avez déjà un compte?</string>
    <string name="register_connect_account">Se connecter</string>
    <string name="password_confirm_hint">Confirmer le mot de passe</string>
    <string name="phone_hint">Numéro de téléphone</string>
    <string name="radio_button_male">Homme</string>
    <string name="radio_button_female">Femme</string>
    <string name="register_gender">Genre</string>
    <string name="profil_title">Profile</string>
    <string name="meeting_title">Rendez-vous</string>
    <string name="setting_title">Paramètres</string>
    <string name="logout_title">Déconnexion</string>
    <string name="home_menu">Home</string>
    <string name="search_menu">Search</string>
    <string name="message_menu">Message</string>
    <string name="setting_menu">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_title">Bienvenue</string>
    <string name="income_meeting_title">Rendez-vous à venir</string>
    <string name="passed_meeting_title">Rendez-vous passées</string>
    <string name="home_horizontale_description_income">Les rendez-vous qui sont à venir</string>
    <string name="home_horizontale_description_passed">Les rendez-vous qui sont passées</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>