<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.RegisterFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/register_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:fontFamily="serif-monospace"
                    android:text="@string/register_title_text"
                    android:textAlignment="center"
                    android:textSize="36sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_margin="@dimen/margin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_register_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/email_hint"
                        android:background="@color/white"
                        android:hint="@string/email_hint"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_margin="@dimen/margin"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        android:background="@color/white"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_margin="@dimen/margin"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_register_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        android:background="@color/white"
                        android:hint="@string/password_confirm_hint"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_margin="@dimen/margin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_register_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="phone"
                        android:background="@color/white"
                        android:hint="@string/phone_hint"
                        android:inputType="phone"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:text="@string/register_gender"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/gender_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/gender_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin"
                        android:text="@string/radio_button_male" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/gender_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin"
                        android:text="@string/radio_button_female" />

                </RadioGroup>

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:text="@string/register_button_hint"
                    app:cornerRadius="@dimen/corner_radius"
                    tools:layout_editor_absoluteX="15dp"
                    tools:layout_editor_absoluteY="460dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/register_question_connect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/register_connect_new_question"
                        tools:layout_editor_absoluteX="45dp"
                        tools:layout_editor_absoluteY="542dp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/register_question_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contextClickable="true"
                        android:text="@string/register_connect_account"
                        android:textColor="@color/link_color"
                        android:textStyle="bold"
                        tools:layout_editor_absoluteX="278dp"
                        tools:layout_editor_absoluteY="542dp" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>