<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="g54516.Hirehub.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:fontFamily="serif-monospace"
            android:text="@string/login_title_text"
            android:textAlignment="center"
            android:textSize="34sp"
            android:typeface="normal" />

        <EditText
            android:id="@+id/login_email"
            android:imeOptions="flagNoFullscreen"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin"
            android:drawableStart="@drawable/baseline_email_24"
            android:hint="@string/email_hint"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin"
            android:text="@string/login_text"
            app:cornerRadius="@dimen/corner_radius" />
    </LinearLayout>
</layout>